--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
                         <a class="nav-link" href="#" title="Newsroom">Newsroom</a>
                     </li>
                     <li class="nav-item">
-                        <span title="About Us" style="cursor: pointer;" class="nav-link introBtn" aria-current="page">About Us</span>
+                        <!-- <span title="About Us" style="cursor: pointer;" class="nav-link introBtn" aria-current="page">About Us</span> -->
+                        <a class="nav-link" href="about.html" title="About us">About Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" title="Contact">Contact Us</a>
@@ -104,7 +105,8 @@
                         <a class="nav-link" href="#" title="Newsroom">Newsroom</a>
                     </li>
                     <li class="nav-item">
-                        <span title="About Us" style="cursor: pointer;" class="nav-link introBtn" aria-current="page">About Us</span>
+                        <!-- <span title="About Us" style="cursor: pointer;" class="nav-link introBtn" aria-current="page">About Us</span> -->
+                        <a class="nav-link" href="about.html" title="About us">About Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" title="Contact">Contact Us</a>
@@ -143,65 +145,65 @@
             </div>
         </div> -->
     <!-- intro div about us -->
-    <div class="intro">
-        <div class="container">
-            <div class="closeIntro d-flex justify-content-center align-items-center" title='Close'>
-                <i class="fa fa-times" aria-hidden="true"></i>
-            </div>
-            <div class="text-center introLogo">
-                <img src="assets/images/cropped-logo1.png" alt="company-logo">
-            </div>
-            <h2 class="mt-5 hide text-center"><span class="text">About Us</span></h2>
-            <div class="mx-auto redLine1" style="width: 4%; height:2px; background-color: #f24738; opacity: 0.5;"></div>
-            <p class="hide text-white mt-4"><span class="text">iTechnologies is a digital transformation company that provides full scale IT consulting, software development and deployment services that help government and business to become more efficient and productive and stay ahead of changing and growing challenges.
-                    Established in 2008, in a small yet competitive market, iTechnologies has emerged as a perferred partner in the IT industry delivering world class eGovernance and Enterprise solutions which enhance service delivery andreduce costs though increased productivity and efficiency gains.</span></p>
-            <h2 class="mt-5 hide text-white text-center"><span class="text">Our Values</span></h2>
-            <div class="mx-auto redLine2" style="width: 4%; height:2px; background-color: #f24738; opacity: 0.5;"></div>
-            <div class="row mt-4">
-                <div class="col-3">
-                    <div class="box p-4 text-center text-white d-flex flex-column justify-content-center align-items-center" style="background-color:#00666c;
+    <!-- <div class="intro">
+            <div class="container">
+                <div class="closeIntro d-flex justify-content-center align-items-center" title='Close'>
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                </div>
+                <div class="text-center introLogo">
+                    <img src="assets/images/cropped-logo1.png" alt="company-logo">
+                </div>
+                <h2 class="mt-5 hide text-center"><span class="text">About Us</span></h2>
+                <div class="mx-auto redLine1" style="width: 4%; height:2px; background-color: #f24738; opacity: 0.5;"></div>
+                <p class="hide text-white mt-4"><span class="text">iTechnologies is a digital transformation company that provides full scale IT consulting, software development and deployment services that help government and business to become more efficient and productive and stay ahead of changing and growing challenges.
+                Established in 2008, in a small yet competitive market, iTechnologies has emerged as a perferred partner in the IT industry delivering world class eGovernance and Enterprise solutions which enhance service delivery andreduce costs though increased productivity and efficiency gains.</span></p>
+                <h2 class="mt-5 hide text-white text-center"><span class="text">Our Values</span></h2>
+                <div class="mx-auto redLine2" style="width: 4%; height:2px; background-color: #f24738; opacity: 0.5;"></div>
+                <div class="row mt-4">
+                    <div class="col-3">
+                        <div class="box p-4 text-center text-white d-flex flex-column justify-content-center align-items-center" style="background-color:#00666c;
                             height:100%">
-                        <img class="mb-2" src="assets/images/v1.png" width="30%" alt="">
-                        <h3>COLLABORATION</h3>
-                        <p class="m-0">iTechnologies believes in enduring partnerships and active collaboration amongst team members and with Customers.
-                        </p>
+                            <img class="mb-2" src="assets/images/v1.png" width="30%" alt="">
+                            <h3>COLLABORATION</h3>
+                            <p class="m-0">iTechnologies believes in enduring partnerships and active collaboration amongst team members and with Customers.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="box p-4 text-center text-white d-flex flex-column justify-content-center align-items-center" style="background-color:#105a12;
+                            height:100%">
+                            <img class="mb-2" src="assets/images/v2.png" width="30%" alt="">
+                            <h3>COMMITEMENT</h3>
+                            <p class="m-0">iTechnologies is committed to delivering workable solutions that meet Customer requirements.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="box p-4 text-center text-white d-flex flex-column justify-content-center align-items-center" style="background-color:#920c1f;
+                            height:100%">
+                            <img class="mb-2" src="assets/images/v3.png" width="30%" alt="">
+                            <h3>INTEGRITY</h3>
+                            <p class="m-0">iTechnologies believes that integrity is the cornerstone of building customer relationships.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="box p-4 text-center text-white d-flex flex-column justify-content-center align-items-center" style="background-color:#a6680b;
+                            height:100%">
+                            <img class="mb-2" src="assets/images/v4.png" width="30%" alt="">
+                            <h3>INNOVATION</h3>
+                            <p class="m-0">iTechnologies uses its experience and skills to continuously innovate the way we approach problems and provide solutions and guidance to our customers.
+                            </p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-3">
-                    <div class="box p-4 text-center text-white d-flex flex-column justify-content-center align-items-center" style="background-color:#105a12;
-                            height:100%">
-                        <img class="mb-2" src="assets/images/v2.png" width="30%" alt="">
-                        <h3>COMMITEMENT</h3>
-                        <p class="m-0">iTechnologies is committed to delivering workable solutions that meet Customer requirements.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-3">
-                    <div class="box p-4 text-center text-white d-flex flex-column justify-content-center align-items-center" style="background-color:#920c1f;
-                            height:100%">
-                        <img class="mb-2" src="assets/images/v3.png" width="30%" alt="">
-                        <h3>INTEGRITY</h3>
-                        <p class="m-0">iTechnologies believes that integrity is the cornerstone of building customer relationships.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-3">
-                    <div class="box p-4 text-center text-white d-flex flex-column justify-content-center align-items-center" style="background-color:#a6680b;
-                            height:100%">
-                        <img class="mb-2" src="assets/images/v4.png" width="30%" alt="">
-                        <h3>INNOVATION</h3>
-                        <p class="m-0">iTechnologies uses its experience and skills to continuously innovate the way we approach problems and provide solutions and guidance to our customers.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <h2 class="mt-5 hide text-white text-center"><span class="text">Our Mission</span></h2>
-            <div class="mx-auto redLine3" style="width: 4%; height:2px; background-color: #f24738; opacity: 0.5;"></div>
-            <p class="hide text-white mt-4"><span class="text">We strive to be the trusted and preferred provider of technology solutions that enable businesses and organizations to succeed. <br> <br>
+                <h2 class="mt-5 hide text-white text-center"><span class="text">Our Mission</span></h2>
+                <div class="mx-auto redLine3" style="width: 4%; height:2px; background-color: #f24738; opacity: 0.5;"></div>
+                <p class="hide text-white mt-4"><span class="text">We strive to be the trusted and preferred provider of technology solutions that enable businesses and organizations to succeed. <br> <br>
                     We BELIEVE that the Customer is the real reason behind our BEING. Therefore, we place the Customers at the Core of all that we do at iTechnologies. Our Customers INSPIRE us to do the best we can. We take our Customer’s requirements and pains, analyze them and innovate by breaking down complex processes into simpler ones with workable solutions. Through the solutions we provide, Customers can gain significant insight into their organizations which enable them, to efficiently and effectively organize, make decisions and grow. Customers can always Expect More from iTechnologies. <br> <br>
-                    Our continued support enables customers to continue using their systems as they scale up and add new processes and functions in their organization.</span></p>
-        </div>
-    </div>
+                Our continued support enables customers to continue using their systems as they scale up and add new processes and functions in their organization.</span></p>
+            </div>
+        </div> -->
     <!-- intro div about us end -->
     <!-- hero section -->
     <div class="hero panel px-4 text-center d-flex flex-column align-items-center justify-content-center" style="position:relative; padding-top: 250px; padding-bottom: 200px; min-height: 100vh;">
@@ -268,7 +270,7 @@
             <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
                 <div class="modal-content p-3 p-lg-5">
                     <div class="modal-header">
-                        <h3 style="color:#eba63f;">Business Process</h3>
+                        <h3 style="color:#eba63f;">Application Re-Engineering</h3>
                         <!-- modal close button: -->
                         <span title="close" type="button" data-bs-dismiss="modal" aria-label="Close"><i style="font-size: 30px; color:grey;" class="far fa-times-circle"></i></span>
                     </div>
