changes as per  6 - 12 - 2021

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     </div>
     </div>
     <!-- Services -->
-    <section style="padding: 3% 0px; background-color:#fff;">
+    <section class="services" style="padding: 3% 0px; background-color:#fff;">
         <!-- modals start-->
         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
@@ -239,7 +239,7 @@
                         <span title="close" type="button" data-bs-dismiss="modal" aria-label="Close"><i style="font-size: 30px; color:grey;" class="far fa-times-circle"></i></span>
                     </div>
                     <div class="modal-body">
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem sequi omnis voluptas veritatis blanditiis aut ipsa corporis quisquam voluptatum aliquam, unde quo dolores nemo natus enim vero nesciunt hic placeat cum sapiente officiis possimus quidem eius, culpa? Harum magni amet nisi qui atque voluptas dignissimos ab nulla reprehenderit? Quo distinctio illo repellat consequuntur consectetur quisquam accusantium, veniam incidunt, expedita, sint iusto libero provident. Sit corrupti soluta numquam voluptatum exercitationem laboriosam a perspiciatis deserunt quidem, voluptatibus incidunt molestias neque ullam, aliquam.</p>
+                        <p>Our expertise in development of software application is supported by capable team mix of business process professionals, technology solution professionals, system design, development, testing, data migration, and implementation and rollout support</p>
                     </div>
                     <!-- <div class="modal-footer">
                         <button type="button" class="snip1417modal-close btn px-5 my-1 my-lg-3 mx-2" data-dismiss="modal">Cancel</button>
@@ -257,7 +257,10 @@
                         <span title="close" type="button" data-bs-dismiss="modal" aria-label="Close"><i style="font-size: 30px; color:grey;" class="far fa-times-circle"></i></span>
                     </div>
                     <div class="modal-body">
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem sequi omnis voluptas veritatis blanditiis aut ipsa corporis quisquam voluptatum aliquam, unde quo dolores nemo natus enim vero nesciunt hic placeat cum sapiente officiis possimus quidem eius, culpa? Harum magni amet nisi qui atque voluptas dignissimos ab nulla reprehenderit? Quo distinctio illo repellat consequuntur consectetur quisquam accusantium, veniam incidunt, expedita, sint iusto libero provident. Sit corrupti soluta numquam voluptatum exercitationem laboriosam a perspiciatis deserunt quidem.</p>
+                        <p>We provide consultancy services in ICT related areas. We take up assignments where the scope
+                            of work involves study of processes, process streamlining for automation or semi-automation by use of ICT. Consultancy services also include assessment of implemented software systems, requirement for
+                            system upgrades to cope up with the maturity of organizations, inclusion of new operational activities, increase in workforce, etc. Activities include review of existing processes, conduct existing system audit and provide recommendations on systems and ICT roadmaps. We provide advisory services to agencies on technology advancements and support approach on proprietary systems and support cycle by the OEMs.
+                        </p>
                     </div>
                     <!-- <div class="modal-footer">
                         <button type="button" class="snip1417modal-close btn px-5 my-1 my-lg-3 mx-2" data-dismiss="modal">Cancel</button>
@@ -275,7 +278,7 @@
                         <span title="close" type="button" data-bs-dismiss="modal" aria-label="Close"><i style="font-size: 30px; color:grey;" class="far fa-times-circle"></i></span>
                     </div>
                     <div class="modal-body">
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem sequi omnis voluptas veritatis blanditiis aut ipsa corporis quisquam voluptatum aliquam, unde quo dolores nemo natus enim vero nesciunt hic placeat cum sapiente officiis possimus quidem eius, culpa? Harum magni amet nisi qui atque voluptas dignissimos ab nulla reprehenderit.</p>
+                        <p>For existing applications which are developed in some obsolete platforms or platforms that are not supported any further, iTechnologies provide consulting to help upgrade applications to newer platforms and carry out development of applications in newer platforms and correspondingly migrate data to new application. Application re-reengineering also involves business process re-engineering and process optimization to meet the standards and best practices in new technology platform. Such modifications are well documented for future reference by the client.</p>
                     </div>
                     <!-- <div class="modal-footer">
                         <button type="button" class="snip1417modal-close btn px-5 my-1 my-lg-3 mx-2" data-dismiss="modal">Cancel</button>
@@ -288,12 +291,12 @@
             <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
                 <div class="modal-content p-3 p-lg-5">
                     <div class="modal-header">
-                        <h3 style="color:#eba63f;">Digitization</h3>
+                        <h3 style="color:#eba63f;">COTS Product Implementation</h3>
                         <!-- modal close button: -->
                         <span title="close" type="button" data-bs-dismiss="modal" aria-label="Close"><i style="font-size: 30px; color:grey;" class="far fa-times-circle"></i></span>
                     </div>
                     <div class="modal-body">
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem sequi omnis voluptas veritatis blanditiis aut ipsa corporis quisquam voluptatum aliquam, unde quo dolores nemo natus enim vero nesciunt hic placeat cum sapiente officiis possimus quidem eius, culpa? Harum magni amet nisi qui atque voluptas dignissimos ab nulla reprehenderit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, optio voluptas tempora error amet quasi asperiores repellat exercitationem quibusdam ea.</p>
+                        <p>Involves Implementation of Proprietary products implementation in situations where custom development of applications does not provide </p>
                     </div>
                     <!-- <div class="modal-footer">
                         <button type="button" class="snip1417modal-close btn px-5 my-1 my-lg-3 mx-2" data-dismiss="modal">Cancel</button>
@@ -306,12 +309,12 @@
             <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
                 <div class="modal-content p-3 p-lg-5">
                     <div class="modal-header">
-                        <h3 style="color:#eba63f;">System Integration</h3>
+                        <h3 style="color:#eba63f;">Migration of Communication Apps to Cloud</h3>
                         <!-- modal close button: -->
                         <span title="close" type="button" data-bs-dismiss="modal" aria-label="Close"><i style="font-size: 30px; color:grey;" class="far fa-times-circle"></i></span>
                     </div>
                     <div class="modal-body">
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem sequi omnis voluptas veritatis blanditiis aut ipsa corporis quisquam voluptatum aliquam, unde quo dolores nemo natus enim vero nesciunt hic placeat cum sapiente officiis possimus quidem eius, culpa? Harum magni amet nisi qui atque voluptas dignissimos ab nulla reprehenderit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, optio voluptas tempora error amet quasi asperiores repellat exercitationem quibusdam ea.</p>
+                        <p>We are helping clients to migrate email hosting and enterprise applications to Google Apps and Microsoft Office 365. We help clients determine the requirements and provide comparative study of different options and enable clients to select appropriate solution</p>
                     </div>
                     <!-- <div class="modal-footer">
                         <button type="button" class="snip1417modal-close btn px-5 my-1 my-lg-3 mx-2" data-dismiss="modal">Cancel</button>
@@ -329,7 +332,7 @@
                         <span title="close" type="button" data-bs-dismiss="modal" aria-label="Close"><i style="font-size: 30px; color:grey;" class="far fa-times-circle"></i></span>
                     </div>
                     <div class="modal-body">
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem sequi omnis voluptas veritatis blanditiis aut ipsa corporis quisquam voluptatum aliquam, unde quo dolores nemo natus enim vero nesciunt hic placeat cum sapiente officiis possimus quidem eius, culpa? Harum magni amet nisi qui atque voluptas dignissimos ab nulla reprehenderit.</p>
+                        <p>We provide professional mobile consulting and business analysis to analyze your needs and clinets requirements, define and prioritize features, as well as plan out the solution architecture and conduct usability testing.We offer native mobile development for iOS, Android and cross-platform/hybrid development of mobile apps</p>
                     </div>
                     <!-- <div class="modal-footer">
                         <button type="button" class="snip1417modal-close btn px-5 my-1 my-lg-3 mx-2" data-dismiss="modal">Cancel</button>
@@ -342,12 +345,12 @@
             <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
                 <div class="modal-content p-3 p-lg-5">
                     <div class="modal-header">
-                        <h3 style="color:#eba63f;">Implementation</h3>
+                        <h3 style="color:#eba63f;"> Customization of Open Source Systems and Web Development</h3>
                         <!-- modal close button: -->
                         <span title="close" type="button" data-bs-dismiss="modal" aria-label="Close"><i style="font-size: 30px; color:grey;" class="far fa-times-circle"></i></span>
                     </div>
                     <div class="modal-body">
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem sequi omnis voluptas veritatis blanditiis aut ipsa corporis quisquam voluptatum aliquam, unde quo dolores nemo natus enim vero nesciunt hic placeat cum sapiente officiis possimus quidem eius, culpa? Harum magni amet nisi qui atque voluptas dignissimos ab nulla reprehenderit. Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Quam corporis natus enim nulla porro quos labore, minima cupiditate. Explicabo doloremque enim, cumque facere rem assumenda sed quidem repellendus dolores iure, possimus cupiditate eum ad veniam ea. Hic, magni, minus obcaecati modi, molestias commodi suscipit sit atque doloremque expedita corporis qui?</p>
+                        <p>We develop dynamic website based on Joomla, Wrodpress, Drupal and Dot Net Nuke Content Management System. We do customization of Open Source Systems like Alfresco and Liferay to incorporate the requirements of our clients</p>
                     </div>
                     <!-- <div class="modal-footer">
                         <button type="button" class="snip1417modal-close btn px-5 my-1 my-lg-3 mx-2" data-dismiss="modal">Cancel</button>
@@ -415,7 +418,7 @@
                         <figcaption>
                             <i><img class="img-fluid" src="assets/images/service3.png" alt=""></i>
                             <!-- <i class="bi bi-bar-chart-steps iservice"></i> -->
-                            <h3>Business <br> Process</h3>
+                            <h3>Application <br> Re-Engineering</h3>
                             <!--  <h5><a href="">
                             <svg class="myBtn5" xmlns="http://www.w3.org/2000/svg" width="200" height="40" viewBox="0 0 220 60">
                                 <rect x="-10" y="0" width="60" height="60" rx="30" ry="30" fill="#e40c2b" style="opacity: 0.9;" />
@@ -429,7 +432,7 @@
                         <figcaption>
                             <i><img class="img-fluid" src="assets/images/service4.png" alt=""></i>
                             <!-- <i class="bi bi-record-circle iservice"></i> -->
-                            <h3>Digitization <br></h3>
+                            <h3>COTS Product <br> Implementation</h3>
                             <!--  <h5><a href="">
                             <svg class="myBtn6" xmlns="http://www.w3.org/2000/svg" width="200" height="40" viewBox="0 0 220 60">
                                 <rect x="-10" y="0" width="60" height="60" rx="30" ry="30" fill="#e40c2b" style="opacity: 0.9;" />
@@ -443,7 +446,7 @@
                         <figcaption>
                             <i><img class="img-fluid" src="assets/images/service5.png" alt=""></i>
                             <!-- <i class="bi bi-aspect-ratio-fill iservice"></i> -->
-                            <h3>System <br>Integration</h3>
+                            <h3>Migration of Communication Apps</h3>
                             <!-- <h5><a href="">
                             <svg class="myBtn6" xmlns="http://www.w3.org/2000/svg" width="200" height="40" viewBox="0 0 220 60">
                                 <rect x="-10" y="0" width="60" height="60" rx="30" ry="30" fill="#e40c2b" style="opacity: 0.9;" />
@@ -471,7 +474,7 @@
                         <figcaption>
                             <i><img class="img-fluid" src="assets/images/service7.png" alt=""></i>
                             <!-- <i class="bi bi-bounding-box iservice"></i> -->
-                            <h3>Implementation</h3>
+                            <h3>Open Source Systems and Web Development</h3>
                             <!--  <h5><a href="">
                             <svg class="myBtn6" xmlns="http://www.w3.org/2000/svg" width="200" height="40" viewBox="0 0 220 60">
                                 <rect x="-10" y="0" width="60" height="60" rx="30" ry="30" fill="#e40c2b" style="opacity: 0.9;" />
