--- a/index.html
+++ b/index.html
@@ -728,18 +728,21 @@
                         <div class="py-4 newsblock" style="border-bottom: solid 1px #bebebe;">
                             <a href="">
                                 <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam expedita reiciendis eveniet iure quia et.</p>
+                                <p class="m-0 mt-1" style="font-size:11px; color:#ffc432;">VACANCY | Posted on: 6 Dec 2021 - 2:38pm</p>
                                 <i class="bi bi-arrow-right"></i>
                             </a>
                         </div>
                         <div class="py-4 newsblock" style="border-bottom: solid 1px #bebebe;">
                             <a href="">
                                 <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam expedita reiciendis eveniet iure quia et.</p>
+                                <p class="m-0 mt-1" style="font-size:11px; color:#ffc432;">NEWS | Posted on: 6 Dec 2021 - 2:38pm</p>
                                 <i class="bi bi-arrow-right"></i>
                             </a>
                         </div>
                         <div class="py-4 newsblock" style="border-bottom: solid 1px #bebebe;">
                             <a href="">
                                 <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam expedita reiciendis eveniet iure quia et.</p>
+                                <p class="m-0 mt-1" style="font-size:11px; color:#ffc432;">NEWS | Posted on: 6 Dec 2021 - 2:38pm</p>
                                 <i class="bi bi-arrow-right"></i>
                             </a>
                         </div>
