--- a/about.html
+++ b/about.html
@@ -142,7 +142,7 @@
                     We have teams specialized in Open Source Technology Stack (PHP frameworks and J2EE frameworks) and Microsoft Technology Stack (Dot Net Framework). Adequate skills are available in majority of the commonly used backend databases (MySQL, Postgresql, MariaDB, and MS SQL Server).Our team has been involved in development of several software applications for government agencies in Bhutan. We have also worked with international development partners to execute software applications development for government agencies are end clients.
                 </p>
                 <div class="row py-3 py-lg-4">
-                    <div class="col-md-6 col-xl-4 mb-4">
+                    <div class="col-md-6 col-xl-3 mb-4">
                         <figure class="snip0045 red text-center">
                             <figcaption class="mb-4">
                                 <h2>Full Name</h2>
@@ -151,7 +151,7 @@
                             <img src="assets/images/avatar.jpg" class="img-fluid" alt="Kunzang Choden">
                             <div class="position">
                                 <!-- <span style="color:#e9e9e9;"></span> -->
-                                <span style="color:#e9e9e9; width: 100%; height: 100%; padding: 24px 15px;" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal-256">
+                                <span style="color:#e9e9e9; width: 100%; height: 100%; padding: 15px 11px;" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal-256">
                                     <strong>View Profile</strong><i class="ps-3 fas fa-external-link-alt"></i>
                                 </span>
                             </div>
@@ -183,7 +183,7 @@
                         </div>
                         <!--Modal end-->
                     </div>
-                    <div class="col-md-6 col-xl-4 mb-4">
+                    <div class="col-md-6 col-xl-3 mb-4">
                         <figure class="snip0045 red text-center">
                             <figcaption class="mb-4">
                                 <h2>Full Name</h2>
@@ -192,7 +192,7 @@
                             <img src="assets/images/avatar.jpg" class="img-fluid" alt="Tenzin Tshewang">
                             <div class="position">
                                 <!-- <span style="color:#e9e9e9;"></span> -->
-                                <span style="color:#e9e9e9; width: 100%; height: 100%; padding: 24px 15px;" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal-266">
+                                <span style="color:#e9e9e9; width: 100%; height: 100%; padding: 15px 11px;" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal-266">
                                     <strong>View Profile</strong><i class="ps-3 fas fa-external-link-alt"></i>
                                 </span>
                             </div>
@@ -224,7 +224,7 @@
                         </div>
                         <!--Modal end-->
                     </div>
-                    <div class="col-md-6 col-xl-4 mb-4">
+                    <div class="col-md-6 col-xl-3 mb-4">
                         <figure class="snip0045 red text-center">
                             <figcaption class="mb-4">
                                 <h2>Full Name</h2>
@@ -233,7 +233,48 @@
                             <img src="assets/images/avatar.jpg" class="img-fluid" alt="Chencho Wangyal">
                             <div class="position">
                                 <!-- <span style="color:#e9e9e9;"></span> -->
-                                <span style="color:#e9e9e9; width: 100%; height: 100%; padding: 24px 15px;" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal-275">
+                                <span style="color:#e9e9e9; width: 100%; height: 100%; padding: 15px 11px;" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal-275">
+                                    <strong>View Profile</strong><i class="ps-3 fas fa-external-link-alt"></i>
+                                </span>
+                            </div>
+                        </figure>
+                        <!-- Modal profile info -->
+                        <div class="modal fade" id="exampleModal-275" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                                <div class="modal-content p-3 p-lg-5">
+                                    <div class="modal-header">
+                                        <h4 class="modal-title" id="staticBackdropLabel">Full Name</h4>
+                                        <!-- modal close button: -->
+                                        <span title="close" type="button" data-bs-dismiss="modal" aria-label="Close"><i style="font-size: 30px; color:grey;" class="far fa-times-circle"></i></span>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div class="text-center">
+                                            <img src="assets/images/avatar.jpg" class="w-50" alt="Chencho Wangyal">
+                                            <h5 class="mt-3">
+                                                <p>Designation<br>Department</p>
+                                            </h5>
+                                        </div>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem fugit odio delectus, quaerat culpa repellendus error, ducimus dolore earum ipsa, labore omnis quasi rerum cum, doloribus aliquid repellat incidunt officiis illo. Voluptatum cumque consectetur aspernatur, dolorum suscipit doloribus temporibus, unde vero laboriosam totam laudantium ullam tempore fuga odio neque id assumenda. Ducimus culpa ab, accusantium blanditiis, ratione amet corrupti beatae odit non esse nihil, eveniet eius quae, at sint quia.
+                                    </div>
+                                    <!-- <div class="modal-footer">
+                                        <button type="button" class="snip1417modal-close btn px-5 my-1 my-lg-3 mx-2" data-dismiss="modal">Cancel</button>
+                                        
+                                    </div> -->
+                                </div>
+                            </div>
+                        </div>
+                        <!--Modal end-->
+                    </div>
+                    <div class="col-md-6 col-xl-3 mb-4">
+                        <figure class="snip0045 red text-center">
+                            <figcaption class="mb-4">
+                                <h2>Full Name</h2>
+                                <p>Designation<br>Department</p>
+                            </figcaption>
+                            <img src="assets/images/avatar.jpg" class="img-fluid" alt="Chencho Wangyal">
+                            <div class="position">
+                                <!-- <span style="color:#e9e9e9;"></span> -->
+                                <span style="color:#e9e9e9; width: 100%; height: 100%; padding: 15px 11px;" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal-275">
                                     <strong>View Profile</strong><i class="ps-3 fas fa-external-link-alt"></i>
                                 </span>
                             </div>
@@ -268,7 +309,7 @@
                 </div>
             </div>
             <!-- expertise -->
-            <h2 style="font-size:25px" class="mt-5">Our Expertise</h2>
+            <h2 style="font-size:25px" class="mt-3">Our Expertise</h2>
             <p style="font-size:15px;" class="mt-3"><i style="color:grey;" class="fas fa-quote-left me-3"></i>iTechnologies focuses on nurturing eGovernance and enterprise applications. We have teams specialized in Open Source Technology Stack (PHP frameworks and J2EE frameworks) and Microsoft Technology Stack (Dot Net Framework). Adequate skills are available in majority of the commonly used backend databases (MySQL, PostgreSQL, MariaDB, Oracle and MS SQL Server). Technology platform and database packages are identified based on the complexity of systems in concern and data storage requirement. We developed advanced level competencies in the following technology stacks, platforms and frameworks:<i style="color:grey;" class="fas fa-quote-right ms-3"></i></p>
         </div>
     </section>
