--- a/our-approach.html
+++ b/our-approach.html
@@ -228,7 +228,7 @@
         </div>
     </section>
     <!-- footer -->
-    <section class="footer" style="background-color:#ffb806;">
+    <section class="footer" style="background-color:#e3a409;">
         <div class="container pt-5 pb-4">
             <div class="row m-0 align-items-center">
                 <footer>
