--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <span class="scrollTriggerHeroContent"></span>
     </nav>
     <!-- white bg nav appear on scroll -->
-    <nav class="navbar navbar-expand-lg navbar-light py-2 navbarLight" style="display:none; width: 100%; background-color:#fff; position: fixed; z-index: 100; box-shadow: 0 3px 1rem rgb(0 0 0 / 10%);">
+    <nav class="navbar navbar-expand-lg navbar-light py-2 navbarLight" style="width: 100%; left: 0; right: 0; display:none; background-color:#fff; position: fixed; z-index: 100; box-shadow: 0 3px 1rem rgb(0 0 0 / 10%);">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img id="logo_one1" src="assets/images/new-logo2.png" alt="" class="d-inline-block align-text-top">
